
* FIXED: Explicitly convert boolean conf options to true or false. Redis client
  treats "true" as false.
* CHANGE: Fix for Familia objects with custom suffixes
* CHANGE: Familia::String methods that modify the key now automatically update_expiration.
* ADDED: Familia.qnow, Familia::Object.qstamp, RedisObject#qstamp
* ADDED: RedisObject option: quantize


#### 0.7.0 (2011-03-04) ###############################

* CHANGE: Use RedisObject#multi_from_redis when possible (uses mget command)
* CHANGE: No need to check if a key exists before getting it. It will be nil anyway.
* ADDED: Set#randomraw


#### 0.6.10 (2011-01-08) ###############################

* FIXED: RedisObject#db does not set @db
* CHANGE: RedisObject#to_redis returns the original String if the given value 
is a String, even if :class is specified.
* CHANGE: Update expiration when adding to List, Set, SortedSet, and HashKey
* CHANGE: Only call Familia.ld when in debug mode.
* ADDED: RedisObject#rename, renamenx, persist


#### 0.6.9 (2011-01-09) ###############################

* ADDED: RedisObject#cache
* ADDED: RedisObject#echo
# ADDED: Familia.logger (new option: :logger)


#### 0.6.8 (2011-01-08) ###############################

* CHANGE: RedisObject#members calls compact to remove nils
* ADDED: RedisObject#to_redis/from_redis print message for nils to STDERR
* ADDED: RedisObjects#membersraw for List, Set, and SortedSet


#### 0.6.7 (2011-01-02) ###############################

* FIXED: RedisObject#ttl, grab from instance first. 

#### 0.6.6 (2011-01-02) ###############################

* FIXED: Classes that include Familia now use the suffix defined for that class.
* FIXED: Familia::String#value= calls update_expiration 
* CHANGE: RedisObject classes grab the ttl from @opts[:class]
* ADDED: Familia.classes can return RedisObject.classes


#### 0.6.4 (2010-12-31) ###############################

* CHANGE: initialize does not call from_array (fix for Storable 0.8.6)
